[EBE-3828] Fixed login form labels overlapping

--- a/src/ui/app/login/ek-login/ek-login.less
+++ b/src/ui/app/login/ek-login/ek-login.less
@@ -24,6 +24,12 @@
             font-size: 16px;
         }
 
+        label {
+            &:not(.md-no-float):not(.md-container-ignore) {
+                z-index: inherit;
+            }
+        }
+
         input {
             width: 410px;
         }
